fix events fix tables begin implement of table download